# churnguard-ai

./: .env.example  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml  railway.json
backend/app/: generate_dataset.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: audit_logs.py  auth.py  explain.py  jobs.py  metrics.py  models.py  predict.py
backend/app/core/: cache.py  config.py  drift.py  error_handlers.py  exceptions.py  middleware.py  security.py
backend/app/dependencies/: auth.py
backend/app/ml/: experiment_tracker.py  explainer.py  train.py
backend/app/models/: ab_test.py  audit_log.py  drift_report.py  experiment.py  prediction_job.py  user.py
backend/app/repositories/: ab_test_repository.py  audit_log_repository.py  drift_repository.py  experiment_repository.py  model_version_repository.py  prediction_job_repository.py  user_repository.py
backend/app/schemas/: drift.py  experiment.py  predict.py
backend/app/services/: ab_test_service.py  auth_service.py  batch_service.py  drift_service.py  experiment_service.py  explain_service.py  model_service.py  predict_service.py
backend/app/tasks/: batch_predict.py  drift_check.py  retrain.py  worker.py
backend/tests/: conftest.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
