[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churnguard-ai"
version = "4.0.0"
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF"]
ignore = [
  "E402",
  "E501",
  "F841",
  "N806",
  "N818",
  "RUF002",
  "RUF003",
  "RUF012",
  "S110",
  "S311",
  "S108",
  "S603",
  "S607",
  "B007",
  "B904",
  "UP038",
]
per-file-ignores = {
  "tests/*" = ["S", "N"],
  "app/ml/train.py" = ["T20"],
  "alembic/*" = ["N"],
  "app/generate_dataset.py" = ["S311", "T20", "E501"]
}

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=60 -v --ignore=tests/smoke"

[tool.coverage.run]
source = ["app"]
omit = ["app/ml/train.py", "alembic/*", "app/generate_dataset.py"]